public/styles.css
html {
    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
    color: #333338;
}

body {
    max-width: 480px;
    margin: 0 auto;
}

main.paper-bg {
    display: flex;
    flex-direction: column;

    background-color: #F5F5FA;
    border-radius: 2px;
    box-shadow: 0px 0px 28px 0px rgba(0,0,0,0.75);
    margin: 40px 10px;
    position: relative;
}

.invitation-hero {
    overflow: hidden;
    position: relative;
}

.invitation-hero h1 {
    font-family: 'Allura';
    font-size: 70px;
    line-height: 1.1;
    margin: 140px 0 50px 0;
    text-align: center;
}

.invitation-hero h2 {
    font-size: 16px;
    font-weight: 400;
    letter-spacing: 1px;
    margin: 0 auto;
    max-width: 310px;
    text-align: center;
    text-transform: uppercase;
}

.invitation-hero .horizontal-divider {
    height: 3px;
    background-color: gold;
    border-radius: 2px;
    margin: 16px auto;
    width: 80%;
}

.invitation-hero .date {
    letter-spacing: 1px;
    margin: 0 0 130px 0;
    text-align: center;
    text-transform: uppercase;
}

.location {
    background-color: #333338;
    margin-bottom: 40px;
    padding: 30px 20px;
}

.location a {
    display: flex;
    align-items: center;
    justify-content: center;

    color: #F5F5FA;
    cursor: pointer;
    border: 2px solid #F5F5FA;
    border-radius: 4px;
    margin: 0 auto;
    max-width: 320px;
    padding: 16px;
    text-align: center;
    text-decoration: none;
    transition: all 0.5s ease;
}

.location a:hover {
    color: #333338;
    border-color: #333338;
    background-color: #F5F5FA;
}

.location a span {
    font-size: 14px;
    letter-spacing: 1px;
    line-height: 1.3;
    margin-left: 16px;
    position: relative;
}

.schedule {
    display: flex;
    justify-content: center;

    border-top: 3px solid gold;
    border-bottom: 3px solid gold;
    margin: 20px 50px;
    padding: 30px 0;
    position: relative;
}

.schedule ol {
    list-style: none;
    position: relative;
    margin: 0;
    padding: 0 20px;
}

.schedule li {
    font-family: 'Allura';
    font-size: 32px;
    margin-left: 0;
    line-height: 1.4;
}

.timer {
    display: flex;
    flex-direction: column;

    background-color: #B0B08E;
    border-radius: 2px;
    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
    margin-left: -8px;
    overflow: hidden;
    padding: 20px 40px;
    position: relative;
    width: calc(100% + 16px);
}

.timer .wording {
    display: flex;
}

.timer .clock {
    display: flex;
}

.timer p {
    margin: 6px 0;
    text-align: center;
    text-transform: uppercase;
    width: 25%;
}

.timer .wording p {
    font-size: 13px;
    font-weight: 600;
}

.timer .clock p {
    font-size: 40px;
}

.info {
    padding: 20px;
}

.info ul {
    margin-right: 20px;
}

.info li {
    font-size: 14px;
    line-height: 1.2;
    margin: 28px 0;
    text-align: justify;
}

.info li span {
    font-weight: 600;   
}

.picture-container {
    overflow: hidden;
    position: relative;
    height: 450px;
    width: 100%;
}

.picture-container img {
    object-fit: cover;
    object-position: center bottom;
    height: 100%;
    width: 100%;
}

.picture-container .fading {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 18vh;
    background: #B0B08E;
    background: linear-gradient(0deg,
        #B0B08E 0%,
        transparent  100%
    );
}

.thanks {
    position: relative;
    overflow: hidden;
    background-color: #B0B08E;
    border-radius: 0 0 2px 2px;
}

.thanks p {
    color: #F5F5FA;
    letter-spacing: 1px;
    line-height: 1.4;
    margin: 40px auto 150px auto;
    max-width: 300px;
    text-align: center;
    text-transform: uppercase;
    font-weight: 600;
    font-size: 20px;
}


@media only screen and (max-width: 450px) {
    main.paper-bg {
        margin: 30px 10px;
    }

    .invitation-hero h1 {
        font-size: 64px;
    }
    
    .invitation-hero h2 {
        font-size: 15px;
        max-width: 290px;
    }

    .invitation-hero .date {
        font-size: 15px;
    }
    
    .schedule ol {
        padding: 0 15px;
    }
    
    .schedule li {
        font-size: 26px;
    }

    .timer .clock p {
        font-size: 36px;
    }

    .info {
        padding: 20px 16px;
    }
    
    .thanks p {
        max-width: 275px;
        font-size: 18px;
    }
}

@media only screen and (max-width: 400px) {
    .invitation-hero h1 {
        font-size: 60px;
        margin: 140px 0 40px 0;
    }
    
    .invitation-hero h2 {
        font-size: 14px;
        max-width: 272px;
    }

    .invitation-hero .date {
        font-size: 14px;
        margin: 0 0 115px 0;
    }
    
    .location a span {
        letter-spacing: 0;
    }

    .schedule {
        margin: 20px 40px;
        padding: 20px 0;
    }
    
    .schedule ol {
        padding: 0 12px;
    }
    
    .schedule li {
        font-size: 24px;
    }

    .timer .wording p {
        font-size: 12px;
    }

    .timer .clock p {
        font-size: 32px;
    }

    .info {
        padding: 14px;
    }
    
    .info li {
        font-size: 13px;
        margin: 26px 0;
    }
}

@media only screen and (max-width: 350px) {
    main.paper-bg {
        margin: 20px 6px;
    }

    .invitation-hero h1 {
        font-size: 55px;
    }

    .location {
        padding: 30px 15px;
    }
    
    .location a {
        padding: 16px 14px;
    }
    
    .location a span {
        font-size: 13px;
        margin-left: 14px;
    }

    .timer .clock p {
        font-size: 28px;
    }

    .thanks p {
        max-width: 250px;
        font-size: 16px;
    }
}

